<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.worcowt.app.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/routineFragment"
        android:name="com.worcowt.app.ui.routine.RoutineFragment"
        android:label="@string/nav_routine"
        tools:layout="@layout/fragment_routine" />

    <fragment
        android:id="@+id/statisticsFragment"
        android:name="com.worcowt.app.ui.statistics.StatisticsFragment"
        android:label="@string/nav_statistics"
        tools:layout="@layout/fragment_statistics" />

</navigation>
